# data-demand-agent-training

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: catalog.json  lineage.json  sample_rows.csv
docs/: rollout-guide.md  training-outline.md
examples/requests/: refund_metrics.json
src/demo_demand_agent/: __init__.py  cli.py
tests/: test_cli.py
